# kaicd-fl-poc-notebooks

./: 1.FlowerIntro(Korean translation version).ipynb  2.FlowerScale(Korean Translation Version).ipynb  FlowerIntro-KR.ipynb  FlowerIntro.ipynb  FlowerPrivacy-KR.ipynb  FlowerPrivacy.ipynb  FlowerScale.ipynb  FlowerStrategies-KR.ipynb  FlowerStrategies.ipynb  README.md  introduction-to-fl-with-flower.ipynb  pyproject.toml
